--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/rhymn/beiring",
   "dependencies": {
-    "browser-sync": "^2.9.2"
+    "browser-sync": "^2.9.2",
+    "express": "^4.13.3"
   }
 }
