--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/rhymn/beiring",
   "dependencies": {
-    "browser-sync": "^2.9.2",
-    "express": "^4.13.3"
+    "browser-sync": "^2.9.2"
   }
 }
